định dạng hình ảnh

--- a/GDMail/MailDatGiaTC.html
+++ b/GDMail/MailDatGiaTC.html
@@ -10,7 +10,7 @@
 		</p>
 	</b>
 	<i>
-	<p style="margin-left: 120px; font-size: 20px;" ><img src="nt.jpg" style="float:left; width:350px; height:228px; ">
+	<p style="margin-left: 120px; font-size: 20px;" ><img src="nt.jpg" style="float:left; width:350px; height:228px;border-style: double;">
 	Chúc mừng bạn đã đặt giá thành công.
 	</br>
 	Mã sản phẩm:
