--- a/GDMail/MailDatGiaTC.html
+++ b/GDMail/MailDatGiaTC.html
@@ -11,7 +11,7 @@
 	</b>
 	<i>
 	<p style="margin-left: 120px; font-size: 20px;" ><img src="nt.jpg" style="float:left; width:350px; height:228px;border-style: double;">
-	Chúc mừng bạn đã đặt giá thành công.
+	<font color="red">Chúc mừng</font> bạn đã đặt giá thành công.
 	</br>
 	Mã sản phẩm:
 	</br>
