--- a/GDMail/MailDatGiaTC.html
+++ b/GDMail/MailDatGiaTC.html
@@ -10,23 +10,24 @@
 		</p>
 	</b>
 	<i>
-	<p style="margin-left: 120px; font-size: 20px;" ><img src="nt.jpg" style="float:left; width:350px; height:228px;border-style: double;">
-	<font color="red">Chúc mừng</font> bạn đã đặt giá thành công.
+	<p style="margin-left: 120px; font-size: 20px;" ><img src="nt.jpg" style="float:left; width:280px; height:168px;border-style: double;">
+	&nbsp; &nbsp; <font color="red" size="5">Chúc mừng</font> bạn đã đặt giá thành công.
 	</br>
-	Mã sản phẩm:
+	&nbsp;&nbsp; Mã sản phẩm:
 	</br>
-	Tên sản phẩm:
+	&nbsp;&nbsp; Tên sản phẩm:
 	</br>
-	Giá hiện tại:
+	&nbsp;&nbsp; Giá hiện tại:
 	</br>
-	Ngày ra giá:
+	&nbsp;&nbsp; Ngày ra giá:
 	</br>
-	Mức giá:
+	&nbsp;&nbsp; Mức giá:
 	</br>
-	Cám ơn bạn đã tham gia hệ thống của chúng tôi.
+	&nbsp;&nbsp;&nbsp;&nbsp; Cám ơn bạn đã tham gia hệ thống của chúng tôi.
 	</br>
-	Trân trọng
-	VANP
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Trân trọng
+	</br>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;VANP
 	</p>
 	</i>
 	
