--- a/GDMail/MailDatGiaTC.html
+++ b/GDMail/MailDatGiaTC.html
@@ -5,7 +5,7 @@
 </head>
 <body bgcolor ="#FFE4E1"  >
 	<b>
-		<p style="color: #4169E1;font-size: 40px; margin-left: 320px; ">
+		<p style="color: #4169E1;font-size: 35px; margin-left: 320px; ">
 			VANP
 		</p>
 	</b>
@@ -13,15 +13,15 @@
 	<p style="margin-left: 120px; font-size: 20px;" ><img src="nt.jpg" style="float:left; width:280px; height:168px;border-style: double;">
 	&nbsp; &nbsp; <font color="red" size="5">Chúc mừng</font> bạn đã đặt giá thành công.
 	</br>
-	&nbsp;&nbsp; Mã sản phẩm:
+	&nbsp;&nbsp;&nbsp;&nbsp; Mã sản phẩm:
 	</br>
-	&nbsp;&nbsp; Tên sản phẩm:
+	&nbsp;&nbsp;&nbsp;&nbsp; Tên sản phẩm:
 	</br>
-	&nbsp;&nbsp; Giá hiện tại:
+	&nbsp;&nbsp;&nbsp;&nbsp; Giá hiện tại:
 	</br>
-	&nbsp;&nbsp; Ngày ra giá:
+	&nbsp;&nbsp;&nbsp;&nbsp; Ngày ra giá:
 	</br>
-	&nbsp;&nbsp; Mức giá:
+	&nbsp;&nbsp;&nbsp;&nbsp; Mức giá:
 	</br>
 	&nbsp;&nbsp;&nbsp;&nbsp; Cám ơn bạn đã tham gia hệ thống của chúng tôi.
 	</br>
