--- a/GDMail/MailCoNgDatGiaCaoHon.html
+++ b/GDMail/MailCoNgDatGiaCaoHon.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Mail Send Vanp</title>
 </head>
-<body bgcolor ="#FFE4E1"  >
+<body >
 	<b>
 		<p style="color: #4169E1;font-size: 35px; margin-left: 360px; ">
 			VANP
@@ -11,7 +11,7 @@
 	</b>
 	<i>
 		<p style="margin-left: 120px; font-size: 20px;" ><img src="nt.jpg" style="float:left; width:280px; height:168px;border-style: double;">
-		&nbsp; &nbsp; <font color="red" size="5">Chúc mừng</font> bạn đã đặt giá thành công.
+		&nbsp; &nbsp; <font color="red" size="5">Rất tiếc đã có người đặt giá cao hơn bạn</font>
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mã sản phẩm:
 		</br>
