--- a/GDMail/MailDatGiaTC.html
+++ b/GDMail/MailDatGiaTC.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Mail Send Vanp</title>
 </head>
-<body bgcolor ="#FFE4E1"  >
+<body >
 	<b>
 		<p style="color: #4169E1;font-size: 35px; margin-left: 360px; ">
 			VANP
