--- a/GDMail/MailDatGiaTC.html
+++ b/GDMail/MailDatGiaTC.html
@@ -12,7 +12,7 @@
 		</center>
 	</b>
 	<i>
-		<p style="margin-left: 380px; font-size: 20px;" ><img src="nt.jpg" style="float:left; width:280px; height:168px;border-style: double;">
+		<p style="margin-left: 440px; font-size: 20px;" ><img src="canho.jpg" style="float:left; width:200px; height:150px;border-style: double;">
 		&nbsp; &nbsp; <font color="red" size="5">Chúc mừng</font> bạn đã đặt giá thành công.
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mã sản phẩm:
@@ -26,7 +26,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mức giá:
 		</br>
 		</br>
-		</br>
+		
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Cám ơn bạn đã tham gia hệ thống của chúng tôi.
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Trân trọng
