--- a/GDMail/MailCoNgDatGiaCaoHon.html
+++ b/GDMail/MailCoNgDatGiaCaoHon.html
@@ -5,9 +5,11 @@
 </head>
 <body >
 	<b>
-		<p style="color: #4169E1;font-size: 35px; margin-left: 360px; ">
+		<center>
+		<p style="color: #4169E1;font-size: 35px; ">
 			VANP
 		</p>
+		</center>
 	</b>
 	<i>
 		<p style="margin-left: 120px; font-size: 20px;" ><img src="nt.jpg" style="float:left; width:280px; height:168px;border-style: double;">
