--- a/GDMail/MailCoNgDatGiaCaoHon.html
+++ b/GDMail/MailCoNgDatGiaCaoHon.html
@@ -12,8 +12,8 @@
 		</center>
 	</b>
 	<i>
-		<p style="margin-left: 120px; font-size: 20px;" ><img src="nt.jpg" style="float:left; width:280px; height:168px;border-style: double;">
-		&nbsp; &nbsp; <font color="red" size="5">Rất tiếc đã có người đặt giá cao hơn bạn</font>
+		<p style="margin-left: 440px; font-size: 20px;" ><img src="canho.jpg" style="float:left; width:200px; height:150px;border-style: double;">
+		&nbsp; &nbsp; <b><font color="red" size="5">Rất tiếc đã có người đặt giá cao hơn bạn</font></b>
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mã sản phẩm:
 		</br>
@@ -24,7 +24,6 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Ngày ra giá:
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mức giá:
-		</br>
 		</br>
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Cám ơn bạn đã tham gia hệ thống của chúng tôi.
