--- a/GDMail/MailDatGiaTC.html
+++ b/GDMail/MailDatGiaTC.html
@@ -2,17 +2,38 @@
 <html>
 <head>
 	<title>Mail Send Vanp</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css.css">
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+	<style>
+		.mail {
+		   margin: 100px;
+		   padding: 80px;
+		   max-width: 1000px;
+		   height: 600px;
+		   border: 1px solid black;
+		   font-family: serif;
+		}   
+	</style>
 </head>
 <body >
+<div class="container">
 	<b>
+	<div class="mail" >
 		<center>
-		<p style="color: #4169E1;font-size: 35px;">
+		<p style="color: #4169E1;font-size: 45px;">
 			VANP
 		</p>
 		</center>
 	</b>
+	
 	<i>
-		<p style="margin-left: 440px; font-size: 20px;" ><img src="canho.jpg" style="float:left; width:200px; height:150px;border-style: double;">
+		<p style=" font-size: 20px;" ><img src="canho.jpg" style="float:left; width:200px; height:150px;border-style: double;">
 		&nbsp; &nbsp; <font color="red" size="5">Chúc mừng</font> bạn đã đặt giá thành công.
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mã sản phẩm:
@@ -34,6 +55,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;VANP
 		</p>
 	</i>
-	
+	</div>
+</div>
 </body>
 </html>
