--- a/GDMail/MailDatGiaTC.html
+++ b/GDMail/MailDatGiaTC.html
@@ -12,13 +12,16 @@
 	<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
 	<style>
 		.mail {
-		   margin: 100px;
-		   padding: 80px;
-		   max-width: 1000px;
-		   height: 600px;
+		   margin: 150px;
+		   padding: 50px;
+
 		   border: 1px solid black;
 		   font-family: serif;
 		}   
+		.camon
+		{
+			font-size: 20px;
+		}
 	</style>
 </head>
 <body >
@@ -33,8 +36,8 @@
 	</b>
 	
 	<i>
-		<p style=" font-size: 20px;" ><img src="canho.jpg" style="float:left; width:200px; height:150px;border-style: double;">
-		&nbsp; &nbsp; <font color="red" size="5">Chúc mừng</font> bạn đã đặt giá thành công.
+		<p style=" font-size: 20px;" ><img src="canho.jpg" style="float:left; width:220px; height:170px;border-style: double; margin-left: 80px">
+		&nbsp; &nbsp; <b><font color="red" size="5">Chúc mừng</font></b> bạn đã đặt giá thành công.
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mã sản phẩm:
 		</br>
@@ -47,8 +50,11 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mức giá:
 		</br>
 		</br>
-		
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Cám ơn bạn đã tham gia hệ thống của chúng tôi.
+		<div class="camon">
+		<center>
+		Cám ơn bạn đã tham gia hệ thống của chúng tôi.
+		</center>
+		</div>
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Trân trọng
 		</br>
