--- a/GDMail/MailDatGiaTC.html
+++ b/GDMail/MailDatGiaTC.html
@@ -22,6 +22,18 @@
 		{
 			font-size: 20px;
 		}
+		.tt
+		{
+			font-size: 20px;
+			text-align: right;
+			margin-right: 30px
+		}
+		.kt
+		{
+			font-size: 20px;
+			text-align: right;
+			margin-right: 60px
+		}
 	</style>
 </head>
 <body >
@@ -36,7 +48,7 @@
 	</b>
 	
 	<i>
-		<p style=" font-size: 20px;" ><img src="canho.jpg" style="float:left; width:220px; height:170px;border-style: double; margin-left: 80px">
+		<p style=" font-size: 20px;" ><img src="canho.jpg" style="float:left; width:240px; height:170px;border-style: double; margin-left: 80px">
 		&nbsp; &nbsp; <b><font color="red" size="5">Chúc mừng</font></b> bạn đã đặt giá thành công.
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mã sản phẩm:
@@ -49,16 +61,20 @@
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mức giá:
 		</br>
-		</br>
+		
 		<div class="camon">
 		<center>
 		Cám ơn bạn đã tham gia hệ thống của chúng tôi.
 		</center>
 		</div>
+		
+		<div class="tt">
+			Trân trọng
 		</br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Trân trọng
-		</br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;VANP
+		</div>
+		<div class="kt">
+			VANP
+		</div>
 		</p>
 	</i>
 	</div>
