--- a/GDMail/MailDatGiaTC.html
+++ b/GDMail/MailDatGiaTC.html
@@ -38,18 +38,20 @@
 </head>
 <body >
 <div class="container">
-	<b>
 	<div class="mail" >
-		<center>
-		<p style="color: #4169E1;font-size: 45px;">
-			VANP
-		</p>
-		</center>
-	</b>
-	
+		<b>
+			<center>
+				<p style="color: #4169E1;font-size: 45px;">
+					VANP
+				</p>
+			</center>
+		</b>
 	<i>
 		<p style=" font-size: 20px;" ><img src="canho.jpg" style="float:left; width:240px; height:170px;border-style: double; margin-left: 80px">
-		&nbsp; &nbsp; <b><font color="red" size="5">Chúc mừng</font></b> bạn đã đặt giá thành công.
+		&nbsp; &nbsp; 
+			<b>
+				<font color="red" size="5">Chúc mừng</font>
+			</b> bạn đã đặt giá thành công.
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mã sản phẩm:
 		</br>
@@ -61,11 +63,11 @@
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mức giá:
 		</br>
-		
+
 		<div class="camon">
-		<center>
-		Cám ơn bạn đã tham gia hệ thống của chúng tôi.
-		</center>
+			<center>
+			Cám ơn bạn đã tham gia hệ thống của chúng tôi.
+			</center>
 		</div>
 		
 		<div class="tt">
