--- a/GDMail/MailCoNgDatGiaCaoHon.html
+++ b/GDMail/MailCoNgDatGiaCaoHon.html
@@ -2,19 +2,67 @@
 <html>
 <head>
 	<title>Mail Send Vanp</title>
+	<link rel="stylesheet" type="text/css" href="css.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css.css">
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+	<style>
+		.mail {
+		   margin: 150px;
+		   padding: 50px;
+			border: 4px solid red;
+		   font-family: serif;
+		}  
+		.tb
+		{
+			font-size: 25px;
+			color: red;
+		} 
+		.camon
+		{
+			font-size: 20px;
+		}
+		.tt
+		{
+			font-size: 20px;
+			text-align: right;
+			margin-right: 30px
+		}
+		.kt
+		{
+			font-size: 20px;
+			text-align: right;
+			margin-right: 60px
+		}
+		.font
+		{
+			font-size: 20px;
+		}
+	</style>
 </head>
 <body >
+<div class="container">
 	<b>
+	<div class="mail" >
 		<center>
-		<p style="color: #4169E1;font-size: 35px; ">
-			VANP
-		</p>
+			<p style="color: #4169E1;font-size: 45px; ">
+				VANP
+			</p>
 		</center>
 	</b>
+
 	<i>
-		<p style="margin-left: 440px; font-size: 20px;" ><img src="canho.jpg" style="float:left; width:200px; height:150px;border-style: double;">
-		&nbsp; &nbsp; <b><font color="red" size="5">Rất tiếc đã có người đặt giá cao hơn bạn</font></b>
-		</br>
+		<p style=" font-size: 20px;" ><img src="canho.jpg" style="float:left; width:240px; height:170px;border-style: double; margin-left: 30px">
+		
+		<b>
+			<div class="tb">&nbsp; &nbsp; Rất tiếc đã có người đặt giá cao hơn bạn</div>
+		</b>
+		<div class="font">
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mã sản phẩm:
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Tên sản phẩm:
@@ -25,14 +73,23 @@
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mức giá:
 		</br>
+		</div>
+		<div class="camon">
+			<center>
+			Cám ơn bạn đã tham gia hệ thống của chúng tôi.
+			</center>
+		</div>
+		
+		<div class="tt">
+			Trân trọng
 		</br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Cám ơn bạn đã tham gia hệ thống của chúng tôi.
-		</br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Trân trọng
-		</br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;VANP
+		</div>
+		<div class="kt">
+			VANP
+		</div>
 		</p>
 	</i>
-	
+	</div>
+</div>
 </body>
 </html>
