--- a/GDMail/MailDatGiaTC.html
+++ b/GDMail/MailDatGiaTC.html
@@ -11,28 +11,47 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
 	<style>
+		.hd
+		{
+			font-size: 30px;
+			color: red;
+		}
 		.mail {
-		   margin: 150px;
-		   padding: 50px;
+		   margin: 100px;
+		   padding: 10px;
 
-		   border: 1px solid black;
+
 		   font-family: serif;
 		}   
 		.camon
 		{
-			font-size: 20px;
+			font-size: 25px;
 		}
 		.tt
 		{
-			font-size: 20px;
+			font-size: 25px;
 			text-align: right;
 			margin-right: 30px
 		}
 		.kt
 		{
-			font-size: 20px;
+			font-size: 25px;
 			text-align: right;
 			margin-right: 60px
+		}
+		hr { 
+	    display: block;
+	    margin-top: 0.5em;
+	    margin-bottom: 3em;
+	    margin-left: auto;
+	    margin-right: auto;
+	    border-style: inset;
+	    border-width: 1px;
+		} 
+		.loichao
+		{
+			font-size: 30px;
+
 		}
 	</style>
 </head>
@@ -41,18 +60,26 @@
 	<div class="mail" >
 		<b>
 			<center>
-				<p style="color: #4169E1;font-size: 45px;">
+				<p style="color: #4169E1;font-size: 50px;">
 					VANP
 				</p>
 			</center>
 		</b>
 	<i>
-		<p style=" font-size: 20px;" ><img src="canho.jpg" style="float:left; width:240px; height:170px;border-style: double; margin-left: 80px">
-		&nbsp; &nbsp; 
+	<hr>
+		<div class="loichao">
 			<b>
-				<font color="red" size="5">Chúc mừng</font>
-			</b> bạn đã đặt giá thành công.
+			Xin chào bạn,
+			</b>
+		</div>
+		<div class="hd">
+			<b>
+				Chúc mừng bạn đã đặt giá thành công
+			</b> 
+		</div>
 		</br>
+		<p style=" font-size: 25px;" ><img src="canho.jpg" style="float:left; width:230px; height:180px;border-style: double; margin-left: 10px">
+		
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mã sản phẩm:
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Tên sản phẩm:
@@ -63,20 +90,15 @@
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mức giá:
 		</br>
-
-		<div class="camon">
-			<center>
-			Cám ơn bạn đã tham gia hệ thống của chúng tôi.
-			</center>
-		</div>
-		
-		<div class="tt">
-			Trân trọng
 		</br>
-		</div>
-		<div class="kt">
-			VANP
-		</div>
+		</br>
+		<hr>
+		<center>
+			<div class="camon">
+				Cám ơn bạn đã tham gia hệ thống của chúng tôi.
+			</div>
+		</center>
+
 		</p>
 	</i>
 	</div>
