--- a/GDMail/MailTBBanThang.html
+++ b/GDMail/MailTBBanThang.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 	<title>Mail Send Vanp</title>
-	<link rel="stylesheet" type="text/css" href="css.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -12,17 +11,18 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
 	<style>
-		.mail {
-		   margin: 150px;
-		   padding: 50px;
-	
-		   font-family: serif;
-		}  
-		.tb
+		.hd
 		{
 			font-size: 25px;
 			color: red;
-		} 
+		}
+		.mail {
+		   margin: 100px;
+		   padding: 10px;
+
+
+		   font-family: serif;
+		}   
 		.camon
 		{
 			font-size: 20px;
@@ -39,30 +39,37 @@
 			text-align: right;
 			margin-right: 60px
 		}
-		.font
-		{
-			font-size: 20px;
-		}
+		hr { 
+	    display: block;
+	    margin-top: 0.5em;
+	    margin-bottom: 3em;
+	    margin-left: auto;
+	    margin-right: auto;
+	    border-style: inset;
+	    border-width: 1px;
+		} 
 	</style>
 </head>
-<body background="cm.jpg" >
+<body >
 <div class="container">
-	<b>
 	<div class="mail" >
-		<center>
-			<p style="color: #4169E1;font-size: 45px; ">
-				VANP
-			</p>
-		</center>
-	</b>
-
-	<i>
-		<p style=" font-size: 20px;" ><img src="canho.jpg" style="float:left; width:240px; height:170px;border-style: double; margin-left: 30px">
-		
 		<b>
-			<div class="tb">&nbsp; &nbsp; Chúc mừng bạn đã thắng</div>
+			<center>
+				<p style="color: #4169E1;font-size: 45px;">
+					VANP
+				</p>
+			</center>
 		</b>
-		<div class="font">
+	<i>
+	<hr>
+		<div class="hd">
+			<b>
+				Chúc mừng bạn đã thắng
+			</b> 
+		</div>
+		</br>
+		<p style=" font-size: 20px;" ><img src="canho.jpg" style="float:left; width:190px; height:150px;border-style: double; margin-left: 10px">
+		
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mã sản phẩm:
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Tên sản phẩm:
@@ -73,20 +80,15 @@
 		</br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mức giá:
 		</br>
-		</div>
-		<div class="camon">
-			<center>
-			Cám ơn bạn đã tham gia hệ thống của chúng tôi.
-			</center>
-		</div>
-		
-		<div class="tt">
-			Trân trọng
 		</br>
-		</div>
-		<div class="kt">
-			VANP
-		</div>
+		</br>
+		<hr>
+		<center>
+			<div class="camon">
+				Cám ơn bạn đã tham gia hệ thống của chúng tôi.
+			</div>
+		</center>
+
 		</p>
 	</i>
 	</div>
