--- a/GDMail/MailTBBanThang.html
+++ b/GDMail/MailTBBanThang.html
@@ -13,7 +13,7 @@
 	<style>
 		.hd
 		{
-			font-size: 25px;
+			font-size: 35px;
 			color: red;
 		}
 		.mail {
@@ -25,17 +25,17 @@
 		}   
 		.camon
 		{
-			font-size: 20px;
+			font-size: 25px;
 		}
 		.tt
 		{
-			font-size: 20px;
+			font-size: 25px;
 			text-align: right;
 			margin-right: 30px
 		}
 		.kt
 		{
-			font-size: 20px;
+			font-size: 25px;
 			text-align: right;
 			margin-right: 60px
 		}
@@ -48,6 +48,11 @@
 	    border-style: inset;
 	    border-width: 1px;
 		} 
+		.loichao
+		{
+			font-size: 30px;
+
+		}
 	</style>
 </head>
 <body >
@@ -55,20 +60,25 @@
 	<div class="mail" >
 		<b>
 			<center>
-				<p style="color: #4169E1;font-size: 45px;">
+				<p style="color: #4169E1;font-size: 50px;">
 					VANP
 				</p>
 			</center>
 		</b>
 	<i>
 	<hr>
+		<div class="loichao">
+			<b>
+			Xin chào bạn,
+			</b>
+		</div>
 		<div class="hd">
 			<b>
 				Chúc mừng bạn đã thắng
 			</b> 
 		</div>
 		</br>
-		<p style=" font-size: 20px;" ><img src="canho.jpg" style="float:left; width:190px; height:150px;border-style: double; margin-left: 10px">
+		<p style=" font-size: 25px;" ><img src="canho.jpg" style="float:left; width:230px; height:180px;border-style: double; margin-left: 10px">
 		
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mã sản phẩm:
 		</br>
