--- a/GDMail/MailCoNgDatGiaCaoHon.html
+++ b/GDMail/MailCoNgDatGiaCaoHon.html
@@ -91,6 +91,9 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mức giá:
 		</br>
 		</br>
+		Bạn có thể quay lại hệ thống của chúng tôi để  đặt giá cao hơn <a href="https://www.w3schools.com/html/">VANP</a> hoặc tham gia đấu giá sản phẩm khác 
+		<a href="https://www.w3schools.com/html/">VANP</a>
+		</br>
 		</br>
 		<hr>
 		<center>
