--- a/GDMail/MailTBBiDa.html
+++ b/GDMail/MailTBBiDa.html
@@ -13,7 +13,7 @@
 	<style>
 		.hd
 		{
-			font-size: 33px;
+			font-size: 29px;
 			color: red;
 		}
 		.mail {
@@ -80,13 +80,19 @@
 		</div>
 
 		</br>
-		<p style=" font-size: 25px;" ><img src="canho.jpg" style="float:left; width:230px; height:180px;border-style: double; margin-left: 10px">
-		
-
+		<p style=" font-size: 25px;" ><img src="skull-and-crossbones-26392_960_720.png" style="float:left; width:180px; height:150px;border-style: double; margin-left: 10px">
+		</br>
+		</br>
+	
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Tên sản phẩm:
 
+	
 		</br>
 		</br>
+
+		</br>
+		Bạn có thể quay lại hệ thống của chúng tôi để đấu giá sản phẩm khác
+		<a href="https://www.w3schools.com/html/">VANP</a>
 		</br>
 		<hr>
 		<center>
