--- a/GDMail/MailDatGiaTC.html
+++ b/GDMail/MailDatGiaTC.html
@@ -91,7 +91,11 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mức giá:
 		</br>
 		</br>
+		Bạn có thể quay lại hệ thống của chúng tôi để đấu giá sản phẩm khác
+		<a href="https://www.w3schools.com/html/">VANP</a>
 		</br>
+		</br>
+	
 		<hr>
 		<center>
 			<div class="camon">
