--- a/GDMail/MailTBBiDa.html
+++ b/GDMail/MailTBBiDa.html
@@ -74,11 +74,9 @@
 		</div>
 		<div class="hd">
 			<b>
-				Rất tiếc bạn đã bị KICK bạn không thể tham gia đấu giá sản phẩm này nữa
-				
+				Rất tiếc, bạn đã bị KICK bạn không thể tham gia đấu giá sản phẩm này nữa
 			</b> 
 		</div>
-
 		</br>
 		<p style=" font-size: 25px;" ><img src="skull-and-crossbones-26392_960_720.png" style="float:left; width:180px; height:150px;border-style: double; margin-left: 10px">
 		</br>
